added some comments and started the body

--- a/index.html
+++ b/index.html
@@ -4,9 +4,21 @@
 		<title>Project 1</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<!--I like to split the normalize and reset up into 2 files
+		I thought it'd fix a parsing error but now it's just habit-->
 		<link rel="stylesheet" media="screen" href="css/normalize.css">
 		<link rel="stylesheet" media="screen" href="css/reset.css">
 		<link rel="stylesheet" media="screen" href="css/screen.css">
 		<script async src="js/site.js"></script>
 	</head>
+	<body>
+		<!--Keeping it light on fluff
+		we'll just assume whoever is at this page 
+		already knows what "The Mailing ListTM" already is-->
+		<h1>The Mailing List</h1>
+		<h2>Are you GOOD ENOUGH for the mailing list?</h2>
+		<h3>Sign up and find out!</h3>
+		<form name="theForm" method="post" action="#null">
+		
+	</body>
 </html>
