--- a/index.html
+++ b/index.html
@@ -14,11 +14,33 @@
 	<body>
 		<!--Keeping it light on fluff
 		we'll just assume whoever is at this page 
-		already knows what "The Mailing ListTM" already is-->
+		already knows what "The Mailing ListTM" already is
+		This can change later though-->
 		<h1>The Mailing List</h1>
 		<h2>Are you GOOD ENOUGH for the mailing list?</h2>
 		<h3>Sign up and find out!</h3>
 		<form name="theForm" method="post" action="#null">
+		<label for="name">Enter your name:</label>
+		<input type="text" id="name" name="name" placeholder="First and last please">
+		<label for="address">Enter your address:</label>
+		<input type="text" id="address" name="address" placeholder="1234 N Fake Avenue">
+		<label for="email">Enter your e-mail:</label>
+		<input type="text" id="email" name="email" placeholder="fakename@gmail.com">
+		<div>
+			<label>Favorite TOOL Album:</label>
+			<input type="radio" id="undertow" name="tool">
+			<label for="lateralus">Undertow</label>
+			<input type="radio" id="aenima" name="tool">
+			<label for="lateralus">AEnima</label>
+			<input type="radio" id="lateralus" name="tool">
+			<label for="lateralus">Lateralus</label>
+			<input type="radio" id="days" name="tool">
+			<label for="lateralus">10,000 Days</label>
+			<input type="radio" id="fear" name="tool">
+			<label for="lateralus">Fear Inoculum</label>
+		</div>
+		
+		</form>
 		
 	</body>
 </html>
