--- a/index.html
+++ b/index.html
@@ -29,17 +29,25 @@
 		<div>
 			<label>Favorite TOOL Album:</label>
 			<input type="radio" id="undertow" name="tool">
-			<label for="lateralus">Undertow</label>
+			<!--MOTHER MARY WON'T YOU WHISPER SOMETHING BUT THE PAST IS DONE?-->
+			<label for="undertow">Undertow</label>
 			<input type="radio" id="aenima" name="tool">
-			<label for="lateralus">AEnima</label>
+			<!--LEARN TO SWIM LEARN TO SWIM LEARN TO SWIM LEARN TO SWIM-->
+			<label for="aenima">AEnima</label>
 			<input type="radio" id="lateralus" name="tool">
+			<!--This is the correct answer-->
+			<!--SPIRAL OUT, KEEP GOING SPIRAL OUT, KEEP GOING-->
 			<label for="lateralus">Lateralus</label>
 			<input type="radio" id="days" name="tool">
-			<label for="lateralus">10,000 Days</label>
+			<!--Who are you to wave your finger you must have been out your head-->
+			<label for="days">10,000 Days</label>
 			<input type="radio" id="fear" name="tool">
-			<label for="lateralus">Fear Inoculum</label>
+			<!--I have never listened to this album before-->
+			<label for="fear">Fear Inoculum</label>
 		</div>
-		
+		<input type="checkbox" id="secret" name="secret">
+		<label for="secret">By checking this box, you swear that your answers were 100% truthful, and that you did not fill out this form under threat of death.</label>
+		<input type="submit" id="submit" value="Submit Form">
 		</form>
 		
 	</body>
