started css for the form itself, shortened final checkbox label

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 			<label for="fear">Fear Inoculum</label>
 		</div>
 		<input type="checkbox" id="secret" name="secret">
-		<label for="secret">By checking this box, you swear that your answers were 100% truthful, and that you did not fill out this form under threat of death.</label>
+		<label for="secret">By checking this box, you swear that your answers were 100% truthful.</label>
 		<input type="submit" id="submit" value="Submit Form">
 		</form>
 		
