changed font sizes again for mobile sizes

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 		<label for="email" class="text">Enter your e-mail:</label>
 		<input type="text" id="email" name="email" placeholder="fakename@gmail.com">
 		<div>
+			<!--In order to make the buttons level with each other, I increased the white space in between each choice. I'm going to fix this later-->
 			<label class="tool">Favorite TOOL Album:</label>
 			<!--MOTHER MARY WON'T YOU WHISPER SOMETHING BUT THE PAST IS DONE?-->
 			<label for="undertow" class="choice">Undertow      </label>
