centered the submit button, realigned the final checkbox

--- a/index.html
+++ b/index.html
@@ -47,9 +47,11 @@
 			<input type="radio" id="fear" name="tool">
 			
 		</div>
-		<label for="secret" class="choice">By checking this box, you swear that your answers were 100% truthful.</label>
+		<label for="secret" class="choicesecret">By checking this box, you swear that your answers were 100% truthful.</label>
 		<input type="checkbox" id="secret" name="secret">
+		<div class="button">
 		<input type="submit" id="submit" value="Submit Form">
+		</div>
 		</form>
 		
 	</body>
